# brainstorm

./: .gitignore  README.md  jetson_xavier_nx_setup.md  max-integration-plan.md
cleanup-notes/: 2026-02-18-system-cleanup.md
design-patterns/: app.js  index.html  patterns.js
docs/: personal_projects.md
guides/: jetson_xavier_nx_setup.md  macos-app-codesign-notarize.md
ideas/: ccOpener-ghostty.md  ccOpener.md  multilang-menubar-translator.md  seo_optimization_saas.md  wechat_stock_bot.md
learn/blender/: led-screen-shader.md
learn/figma/: neon-and-glass-effects.md
learn/mimiclaw/: 00-index.md  01-architecture-overview.md  02-getting-started.md  03-memory-and-flash.md  04-agent-loop.md  05-llm-provider.md  06-tool-system.md  07-telegram-bot.md  08-embedded-c-patterns.md
learn/moltis/: 00-index.md  01-architecture-overview.md  02-getting-started.md  03-configuration-deep-dive.md  04-provider-system.md  05-agent-loop.md  06-tools-and-sandbox.md  07-memory-system.md  (+6 more)
nanobot-memory-improvement/: README.md
projects/: digital-twin-building-sensor.md  lingu-menu-bar-translator.md  smart-home-sensor-fusion.md
projects/nanobot-memory-improvement/: README.md  pyproject.toml
projects/nanobot-memory-improvement/docs/: nanobot-uml.md
projects/nanobot-memory-improvement/nanobot/: __init__.py
projects/nanobot-memory-improvement/nanobot/agent/: memory_manager.py
projects/nanobot-memory-improvement/nanobot/agent/tools/: __init__.py  base.py  memory_tools.py
projects/nanobot-memory-improvement/nanobot/channels/: discord_batch.py  discord_channel.py
(+16 files in other folders)
